      that provide sonames).
    * The "conary showchangeset" command now takes --recurse and
      --no-recurse arguments.
    * All info-* packages are now updated in their own individual jobs;
      this is required for their dependencies to be reliable.
    * The conary syncchildren command now will install new packages
      when appropriate.

  o Repository changes:
    * Additional logging has been added to the repository server.
      Logging is controlled by the "traceLog" config file variable,
      which takes a logging level and log path as arguments.
    * Conary now detects MySQL Database Locked errors and will retry
      the operation a configurable number of times.  The "deadlockRetry"
      configuration variable controls the number of retries and
      defaults to 5.

  o Build changes:
    * Conary now uses site.py to find all possible correct elements of
      sys.path when generating python provides and requires.  Previously,
      new elements added via .pth files in the package being built would
      be ignored for that package.
    * The PythonSetup() build action now works properly with setup.py
      files that use "from setuptools import..." instead of "import
      setuptools".

  o Other changes:
    * The conarybugz.py script has been restored to functionality by
      moving to the conaryclient interface for accessing the
      repository.

Changes in 0.94:

  o Redirects no longer point to a specific trove; they now redirect
    to a branch. The client chooses the latest version on that branch
    which is compatible with the local system.

  o Bug Fixes
    * A bug in getNewTroveList() that could cause duplicate
      troves to be returned has been fixed.
    * A bug that caused a repository server running under Apache to
      fail with an Internal Server Error (500) when a client requested
      a changeset file that does not exist has been fixed.
    * Conary no longer displays an error when attempting to write to a